feat: added the backend process for the comments and update section
Added timestamp details into the comment and spiliting the updates details into jobs api
